--- a/BankTransactions/Views/Transactions/AddOrEdit.cshtml
+++ b/BankTransactions/Views/Transactions/AddOrEdit.cshtml
@@ -1,16 +1,15 @@
 ﻿@model BankTransactions.Models.Transaction
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Transaction";
 }
 
-<h1>Create</h1>
 
-<h4>Transaction</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <div class="col-md-6 offset-md-3">
+<h1>Transaction</h1>
+<hr />       
+<form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="AccountNumber" class="control-label"></label>
@@ -27,31 +26,40 @@
                 <input asp-for="BankName" class="form-control" />
                 <span asp-validation-for="BankName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
                 <label asp-for="SWIFTCode" class="control-label"></label>
                 <input asp-for="SWIFTCode" class="form-control" />
                 <span asp-validation-for="SWIFTCode" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Account" class="control-label"></label>
-                <input asp-for="Account" class="form-control" />
-                <span asp-validation-for="Account" class="text-danger"></span>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                <label asp-for="Ammount" class="control-label"></label>
+                <input asp-for="Ammount" class="form-control" />
+                <span asp-validation-for="Ammount" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                </div>
+
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            
+            
+            
+            <div class="row mt-2">
+                <div class="col-md-6">
+<div class="form-group">
+                <input type="submit" value="Submit" class="btn btn-primary w-100" />
+            </div>
+                </div>
+                <div class="col-md-6">
+                     <a asp-action="Index" class="btn btn-secondary w-100">View All</a>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
