--- a/BankTransactions/Views/Transactions/Delete.cshtml
+++ b/BankTransactions/Views/Transactions/Delete.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.SWIFTCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Account)
+            @Html.DisplayNameFor(model => model.Ammount)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Account)
+            @Html.DisplayFor(model => model.Ammount)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Date)
