--- a/BankTransactions/Views/Transactions/Edit.cshtml
+++ b/BankTransactions/Views/Transactions/Edit.cshtml
@@ -34,9 +34,9 @@
                 <span asp-validation-for="SWIFTCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Account" class="control-label"></label>
-                <input asp-for="Account" class="form-control" />
-                <span asp-validation-for="Account" class="text-danger"></span>
+                <label asp-for="Ammount" class="control-label"></label>
+                <input asp-for="Ammount" class="form-control" />
+                <span asp-validation-for="Ammount" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
