--- a/BankTransactions/Views/Transactions/Index.cshtml
+++ b/BankTransactions/Views/Transactions/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AddOrEdit">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.SWIFTCode)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Account)
+                @Html.DisplayNameFor(model => model.Ammount)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.SWIFTCode)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Account)
+                @Html.DisplayFor(modelItem => item.Ammount)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
