--- a/BankTransactions/Views/Transactions/Index.cshtml
+++ b/BankTransactions/Views/Transactions/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Passbook</h1>
 
 <p>
     <a asp-action="AddOrEdit">Create New</a>
@@ -18,18 +18,19 @@
             <th>
                 @Html.DisplayNameFor(model => model.BeneficiaryName)
             </th>
-            <th>
+          @*  <th>
                 @Html.DisplayNameFor(model => model.BankName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.SWIFTCode)
+            </th>*@
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Ammount)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Date)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -42,18 +43,19 @@
             <td>
                 @Html.DisplayFor(modelItem => item.BeneficiaryName)
             </td>
-            <td>
+           @* <td>
                 @Html.DisplayFor(modelItem => item.BankName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SWIFTCode)
+            </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Ammount)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
+            
             <td>
                 <a asp-action="Edit" asp-route-id="@item.TransactionId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.TransactionId">Details</a> |
