--- a/BankTransactions/Views/Transactions/AddOrEdit.cshtml
+++ b/BankTransactions/Views/Transactions/AddOrEdit.cshtml
@@ -11,6 +11,8 @@
 <hr />       
 <form asp-action="AddOrEdit" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="TransactionId" />
+            <input type="hidden" asp-for="Date" />
             <div class="form-group">
                 <label asp-for="AccountNumber" class="control-label"></label>
                 <input asp-for="AccountNumber" class="form-control" />
@@ -36,9 +38,9 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                <label asp-for="Ammount" class="control-label"></label>
-                <input asp-for="Ammount" class="form-control" />
-                <span asp-validation-for="Ammount" class="text-danger"></span>
+                <label asp-for="Amount" class="control-label"></label>
+                <input asp-for="Amount" class="form-control" />
+                <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
                 </div>
 
