--- a/BankTransactions/Views/Transactions/Index.cshtml
+++ b/BankTransactions/Views/Transactions/Index.cshtml
@@ -6,9 +6,6 @@
 
 <h1>Passbook</h1>
 
-<p>
-    <a asp-action="AddOrEdit">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -28,10 +25,12 @@
                 @Html.DisplayNameFor(model => model.Date)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Ammount)
+                @Html.DisplayNameFor(model => model.Amount)
             </th>
             
-            <th></th>
+            <th>
+                <a asp-action="AddOrEdit" class="btn btn-sm btn-success w-100"><i class="fa-solid fa-plus"></i> New</a>
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -53,13 +52,20 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Ammount)
+                @Html.DisplayFor(modelItem => item.Amount)
             </td>
             
             <td>
-                <a asp-action="Edit" asp-route-id="@item.TransactionId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TransactionId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TransactionId">Delete</a>
+                
+                <form asp-action="Delete" asp-route-id="@item.TransactionId">
+                    <div class="btn-group btn-group-sm">
+ <a asp-action="AddOrEdit" asp-route-id="@item.TransactionId" class="btn btn-warning"><i class="fa-solid fa-pen"></i></a> 
+                @*<a asp-action="Details" asp-route-id="@item.TransactionId">Details</a> |*@
+                    <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you need to delete this record?')">
+                        <i class="fa-solid fa-trash"></i>
+                    </button>
+                    </div>
+                </form>
             </td>
         </tr>
 }
